# gtm

./: .gitignore  CMakeLists.txt  CREDITS.md  INSTALL.md  LICENSE  Makefile  README.md  TODO.md  requirements.txt
licenses/: Iconoir-MIT.txt
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  controller.cpp  controller.h  editcommands.cpp  editcommands.h  project.cpp  project.h  projectinterface.cpp  projectinterface.h  songeditor.cpp  songeditor.h  structs.h
src/sound/: CMakeLists.txt  mixer.cpp  mixer.h  player.cpp  player.h  sequencer.cpp  sequencer.h  song.cpp  song.h  soundtypes.h
src/ui/: CMakeLists.txt  colors.cpp  colors.h  constants.h  customwidgets.cpp  customwidgets.h  dialogs.cpp  dialogs.h  graphicsmetaeventitem.cpp  graphicsmetaeventitem.h  graphicspianokeyitem.cpp  graphicspianokeyitem.h  graphicsscorenoteitem.cpp  graphicsscorenoteitem.h  graphicsselectionitems.cpp  graphicsselectionitems.h  graphicstrackitem.cpp  graphicstrackitem.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  measureroll.cpp  measureroll.h  meters.cpp  meters.h  midikeyspinbox.cpp  midikeyspinbox.h  midispinboxes.cpp  midispinboxes.h  minimapwidget.cpp  minimapwidget.h  pianoroll.cpp  pianoroll.h  previewsoundwindow.cpp  previewsoundwindow.h  previewsoundwindow.ui  selectionstate.h  songlistmodel.cpp  songlistmodel.h  trackbuttonitem.cpp  (+10 more)
src/ui/themes/: default.qss  retro.qss
src/util/: CMakeLists.txt  constants.h  gtmconfig.cpp  gtmconfig.h  io.cpp  io.h  logging.cpp  logging.h  theme.cpp  theme.h  util.cpp  util.h
tools/: compile_timer.py
