qt_add_library(gtm-ui STATIC
    mainwindow.ui
    mainwindow.cpp
    pianoroll.cpp
    minimapwidget.cpp
    meters.cpp
    trackmeteritem.cpp
    trackbuttonitem.cpp
    trackroll.cpp
    measureroll.cpp
    graphicsmetaeventitem.cpp
    graphicspianokeyitem.cpp
    graphicstrackitem.cpp
    graphicsscorenoteitem.cpp
    colors.cpp
    customwidgets.cpp
    previewsoundwindow.ui
    previewsoundwindow.cpp
    midispinboxes.cpp
    songlistmodel.cpp
)

target_link_libraries(gtm-ui PUBLIC
    gtm-util
    gtm-app
    midifile
    Qt6::Core
    Qt6::Widgets
    Qt6::Svg
)

target_include_directories(gtm-ui PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
# CMAKE_CURRENT_SOURCE_DIR
#target_include_directories(gtm-ui PUBLIC ${CMAKE_SOURCE_DIR}/src/ui)

qt_add_resources(gtm-ui "gtm-icons"
    PREFIX "/"
    FILES
        themes/default.qss
        themes/retro.qss
        fonts/IBMPlexMono-Regular.ttf
        fonts/IBM_Plex_Mono_OFL.txt
        fonts/IBMPlexSans-Regular.ttf
        fonts/IBM_Plex_Sans_OFL.txt
        icons/album-list.svg
        icons/check-circle.svg
        icons/check-square.svg
        icons/check.svg
        icons/clipboard-check.svg
        icons/compress-lines.svg
        icons/compress.svg
        icons/control-slider.svg
        icons/copy.svg
        icons/cut.svg
        icons/de-compress.svg
        icons/download.svg
        icons/drag-hand-gesture.svg
        icons/drag.svg
        icons/edit.svg
        icons/expand.svg
        icons/filter-alt.svg
        icons/filter-list-circle.svg
        icons/filter-list.svg
        icons/filter.svg
        icons/floppy-disk-arrow-in.svg
        icons/forward.svg
        icons/frame-select.svg
        icons/horizontal-merge.svg
        icons/horizontal-split.svg
        icons/import.svg
        icons/lasso-select.svg
        icons/more-horiz-circle.svg
        icons/music-double-note-plus.svg
        icons/music-double-note.svg
        icons/music-note-minus.svg
        icons/music-note-plus.svg
        icons/music-note.svg
        icons/paste-clipboard.svg
        icons/pause.svg
        icons/play.svg
        icons/playlist-plus.svg
        icons/plus.svg
        icons/prohibition.svg
        icons/quantize.svg
        icons/redo-action.svg
        icons/redo.svg
        icons/refresh-double.svg
        icons/refresh.svg
        icons/repeat-once.svg
        icons/repeat.svg
        icons/restart.svg
        icons/rewind.svg
        icons/select-invert.svg
        icons/settings.svg
        icons/search-engine.svg
        icons/shuffle.svg
        icons/sidebar-collapse.svg
        icons/sidebar-expand.svg
        icons/sine-wave.svg
        icons/skip-next.svg
        icons/skip-prev.svg
        icons/sound-high.svg
        icons/sound-low.svg
        icons/sound-min.svg
        icons/sound-off.svg
        icons/square.svg
        icons/switch-off.svg
        icons/switch-on.svg
        icons/timer.svg
        icons/track-select.svg
        icons/trash.svg
        icons/trim.svg
        icons/undo-action.svg
        icons/undo.svg
        icons/vertical-merge.svg
        icons/vertical-split.svg
        icons/voice-circle.svg
        icons/voice-lock-circle.svg
        icons/voice.svg
        icons/warning-circle.svg
        icons/warning-triangle.svg
        icons/xmark-circle.svg
        icons/xmark.svg
        icons/zoom-in.svg
        icons/zoom-out.svg
)
